--- a/index.html
+++ b/index.html
@@ -81,6 +81,18 @@
       </div>
     </nav>
 
+    <div class="container-fluid hero">
+      <div class="text-center text-lg-start pt-5 ps-lg-5">
+        <h1 class="hero-title mb-4">Kappa Theta Pi</h1>
+        <h3 class="mb-5 mb-lg-4 px-4 px-lg-0">
+          Professional Technology Fraternity<br />at The University of Chicago
+        </h3>
+        <div>
+          <a href="rush.html#apply" class="btn-rush">RUSH</a>
+        </div>
+      </div>
+    </div>
+
     <!-- JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
