--- a/index.html
+++ b/index.html
@@ -87,9 +87,30 @@
         <h3 class="mb-5 mb-lg-4 px-4 px-lg-0">
           Professional Technology Fraternity<br />at The University of Chicago
         </h3>
-        <div>
+        <div class="mb-4">
           <a href="rush.html#apply" class="btn-rush">RUSH</a>
         </div>
+      </div>
+    </div>
+
+    <div class="container-fluid text-center py-3 footer">
+      <p>2023 KTP Theta Chapter. Website by KTP Alpha Chapter.</p>
+      <div class="social-media">
+        <a
+          href="https://www.instagram.com/uchicagoktp/"
+          class="fa-brands fa-instagram social-media px-1"
+          target="_blank"
+        ></a>
+        <a
+          href="https://www.facebook.com/uchicagoktp"
+          class="fa-brands fa-facebook social-media px-1"
+          target="_blank"
+        ></a>
+        <a
+          href="mailto:uchicagoktp@gmail.com"
+          class="fa fa-envelope social-media px-1"
+          target="_blank"
+        ></a>
       </div>
     </div>
 
