--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg shadow-lg">
-      <div class="container">
+    <nav class="navbar navbar-expand-lg shadow-lg sticky-top">
+      <div class="container-fluid mx-5">
         <button
           class="navbar-toggler ms-auto"
           type="button"
