--- a/rush.html
+++ b/rush.html
@@ -58,8 +58,8 @@
             <li class="nav-item mx-3">
               <a class="nav-link" href="about.html">About Us</a>
             </li>
-            <li class="nav-item mx-3 dropdown active">
-              <a class="nav-link dropdown-toggle" href="rush.html">Rush</a>
+            <li class="nav-item mx-3 dropdown">
+              <a class="nav-link dropdown-toggle active" href="rush.html">Rush</a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="rush.html#apply">Apply</a></li>
                 <li><a class="dropdown-item" href="rush.html#events">Events</a></li>
