--- a/about.html
+++ b/about.html
@@ -36,10 +36,6 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
@@ -127,13 +123,13 @@
           <h2 class="text-center mb-5">Pillars</h2>
         </div>
         <div class="row">
-          <div class="col-md-6 col-lg-4 animate__animated animate__bounceInUp">
+          <div class="col-md-6 col-lg-4">
             <div class="box">
               <div class="icon" style="background: #fceef3">
                 <i class="fa-solid fa-chart-line" style="color: #ff689b"></i>
               </div>
-              <h4 class="title"><a>Professional Development</a></h4>
-              <p class="description">
+              <h4>Professional Development</h4>
+              <p>
                 Through events like interview training, resume building, one-on-one mentorship,
                 private company recruiting, and more, Kappa Theta Pi Professional Development aims
                 to prepare members for success in any technology-related career. We take pride in
@@ -142,13 +138,13 @@
             </div>
           </div>
 
-          <div class="col-md-6 col-lg-4 animate__animated animate__bounceInUp">
+          <div class="col-md-6 col-lg-4">
             <div class="box">
               <div class="icon" style="background: #fff0da">
                 <i class="fa-regular fa-handshake" style="color: #e98e06"></i>
               </div>
-              <h4 class="title"><a>Alumni Mentorship</a></h4>
-              <p class="description">
+              <h4>Alumni Mentorship</h4>
+              <p>
                 Our alumni are spread out across the world and work on cutting-edge technologies.
                 They work at a plethora of companies&#8212;from tech companies like Microsoft,
                 Amazon, Meta, and Google, to startups, consulting firms, financial technology firms,
@@ -157,13 +153,13 @@
             </div>
           </div>
 
-          <div class="col-md-6 col-lg-4 animate__animated animate__bounceInUp">
+          <div class="col-md-6 col-lg-4">
             <div class="box">
               <div class="icon" style="background: #e6fdfc">
                 <i class="fa-regular fa-user" style="color: #3fcdc7"></i>
               </div>
-              <h4 class="title"><a>Social Growth</a></h4>
-              <p class="description">
+              <h4>Social Growth</h4>
+              <p>
                 The people you meet in Kappa Theta Pi will go on to be some of your closest friends
                 throughout college and beyond. We host a variety of exclusive social events
                 throughout the quarter through which our members can bond, some of which include
@@ -171,13 +167,13 @@
               </p>
             </div>
           </div>
-          <div class="col-md-6 col-lg-6 animate__animated animate__bounceInUp">
+          <div class="col-md-6 col-lg-6">
             <div class="box">
               <div class="icon" style="background: #eafde7">
                 <i class="fa-solid fa-laptop" style="color: #41cf2e"></i>
               </div>
-              <h4 class="title"><a>Technical Advancement</a></h4>
-              <p class="description">
+              <h4>Technical Advancement</h4>
+              <p>
                 Kappa Theta Pi provides members numerous opportunities to enhance their current
                 technical skills, as well as learn new ones. Whether it be participation in one of
                 our various project teams or attending a technical workshop, we make it easy for our
@@ -186,13 +182,13 @@
             </div>
           </div>
 
-          <div class="col-md-6 col-lg-6 animate__animated animate__bounceInUp">
+          <div class="col-md-6 col-lg-6">
             <div class="box">
               <div class="icon" style="background: #e1eeff">
                 <i class="fa-regular fa-newspaper" style="color: #2282ff"></i>
               </div>
-              <h4 class="title"><a>Academic Support</a></h4>
-              <p class="description">
+              <h4>Academic Support</h4>
+              <p>
                 Kappa Theta Pi brothers strive to foster academic growth and excellence for each
                 other. We provide a supportive network filled with some of the brightest tech minds
                 at the university that members can always rely on for help in classes and
