--- a/members.html
+++ b/members.html
@@ -140,7 +140,7 @@
     </div>
 
     <div class="bg-gray">
-      <div class="container py-5">
+      <div class="container py-5" id="memberContainer">
         <div class="scroll" id="actives">
           <h2 class="text-center mb-4">Active Members</h2>
           <script>
