--- a/members.html
+++ b/members.html
@@ -175,7 +175,7 @@
                 memberImage +
                 ' onerror="this.onerror=null; this.src=\'assets/img/members/Filler.jpg\'"> <div class="overlay"> <a href= "' +
                 memberLinkedIn +
-                '"class="icon" title="LinkedIn" target="_blank"> <ion-icon name="logo-linkedin"></ion-icon> </a> <div title=" ' +
+                '"class="icon" title="LinkedIn" target="_blank"> <i class="fa-brands fa-linkedin"></i> </a> <div title=" ' +
                 memberPledgeClass +
                 ' " class="text">&' +
                 memberPledgeClass +
