--- a/members.html
+++ b/members.html
@@ -86,22 +86,22 @@
         <h2 class="text-center mb-5">Executive Board</h2>
 
         <div class="row justify-content-center">
-          <div class="col-4 col-lg-2 px-lg-3 text-center">
+          <div class="col-4 col-md-3 col-lg-2 px-lg-3 text-center">
             <img class="w-100 mb-2" src="assets/img/members/Pratham_Gandhi.jpg" alt="" />
             <h2 class="eboard-name mb-0">Pratham Gandhi</h2>
             <p>President</p>
           </div>
-          <div class="col-4 col-lg-2 px-lg-3 text-center">
+          <div class="col-4 col-md-3 col-lg-2 px-lg-3 text-center">
             <img class="w-100 mb-2" src="assets/img/members/Minjoo_Song.jpg" alt="" />
             <h2 class="eboard-name mb-0">Minjoo Song</h2>
             <p>Vice President</p>
           </div>
-          <div class="col-4 col-lg-2 px-lg-3 text-center">
+          <div class="col-4 col-md-3 col-lg-2 px-lg-3 text-center">
             <img class="w-100 mb-2" src="assets/img/members/Iris_Hwang.jpg" alt="" />
             <h2 class="eboard-name mb-0">Iris Hwang</h2>
             <p>Director of Engagement</p>
           </div>
-          <div class="col-4 col-lg-2 px-lg-3 text-center">
+          <div class="col-4 col-md-3 col-lg-2 px-lg-3 text-center">
             <img
               class="w-100 mb-2"
               src="assets/img/members/Gregorio_Florentino_Sanchez.jpg"
@@ -110,27 +110,27 @@
             <h2 class="eboard-name mb-0">Gregorio Florentino Sanchez</h2>
             <p>Director of Finance</p>
           </div>
-          <div class="col-4 col-lg-2 px-lg-3 text-center">
+          <div class="col-4 col-md-3 col-lg-2 px-lg-3 text-center">
             <img class="w-100 mb-2" src="assets/img/members/Filler.jpg" alt="" />
             <h2 class="eboard-name mb-0">Zelia Mauro</h2>
             <p>Director of Marketing</p>
           </div>
-          <div class="col-4 col-lg-2 px-lg-3 text-center">
+          <div class="col-4 col-md-3 col-lg-2 px-lg-3 text-center">
             <img class="w-100 mb-2" src="assets/img/members/Kyle_Wong.jpg" alt="" />
             <h2 class="eboard-name mb-0">Kyle Wong</h2>
             <p>Director of Membership</p>
           </div>
-          <div class="col-4 col-lg-2 px-lg-3 text-center">
+          <div class="col-4 col-md-3 col-lg-2 px-lg-3 text-center">
             <img class="w-100 mb-2" src="assets/img/members/Joshua_Ahn.jpg" alt="" />
             <h2 class="eboard-name mb-0">Joshua Ahn</h2>
             <p>Director of Outreach</p>
           </div>
-          <div class="col-4 col-lg-2 px-lg-3 text-center">
+          <div class="col-4 col-md-3 col-lg-2 px-lg-3 text-center">
             <img class="w-100 mb-2" src="assets/img/members/Katherine_Sun.jpg" alt="" />
             <h2 class="eboard-name mb-0">Katie Sun</h2>
             <p>Director of Professional Development</p>
           </div>
-          <div class="col-4 col-lg-2 px-lg-3 text-center">
+          <div class="col-4 col-md-3 col-lg-2 px-lg-3 text-center">
             <img class="w-100 mb-2" src="assets/img/members/Rohan_Deme.jpg" alt="" />
             <h2 class="eboard-name mb-0">Rohan Deme</h2>
             <p>Director of Technology</p>
