--- a/members.html
+++ b/members.html
@@ -41,11 +41,6 @@
     <link type="text/css" rel="stylesheet" href="assets/css/lightslider.css" />
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="assets/js/lightslider.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $("#lightSlider").lightSlider();
-      });
-    </script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg shadow-lg sticky-top">
@@ -208,70 +203,74 @@
       </div>
     </div>
     <div class="container">
-      <ul id="lightSlider">
+      <ul id="carousel">
         <li>
-          <h3>First Slide</h3>
-          <p>Lorem ipsum Cupidatat quis pariatur anim.</p>
+          <img class="img-fluid" src="assets/img/companies/amazon.png" alt="" />
         </li>
         <li>
-          <h3>Second Slide</h3>
-          <p>Lorem ipsum Excepteur amet adipisicing fugiat velit nisi.</p>
+          <img class="img-fluid" src="assets/img/companies/becker.png" alt="" />
+        </li>
+        <li>
+          <img class="img-fluid" src="assets/img/companies/google.png" alt="" />
+        </li>
+        <li>
+          <img class="img-fluid" src="assets/img/companies/apple.png" alt="" />
+        </li>
+        <li>
+          <img class="img-fluid" src="assets/img/companies/janestreet.png" alt="" />
+        </li>
+        <li>
+          <img class="img-fluid" src="assets/img/companies/jnj.png" alt="" />
+        </li>
+        <li>
+          <img class="img-fluid" src="assets/img/companies/jpmorgan.png" alt="" />
+        </li>
+        <li>
+          <img class="img-fluid" src="assets/img/companies/justicetext.png" alt="" />
+        </li>
+        <li>
+          <img class="img-fluid" src="assets/img/companies/blackstone.png" alt="" />
+        </li>
+        <li>
+          <img class="img-fluid" src="assets/img/companies/microsoft.png" alt="" />
+        </li>
+        <li>
+          <img class="img-fluid" src="assets/img/companies/nextdoor.png" alt="" />
+        </li>
+        <li>
+          <img class="img-fluid" src="assets/img/companies/pwc.png" alt="" />
+        </li>
+        <li>
+          <img class="img-fluid" src="assets/img/companies/stripe.png" alt="" />
+        </li>
+        <li>
+          <img class="img-fluid" src="assets/img/companies/codeyourdreams.png" alt="" />
+        </li>
+        <li>
+          <img class="img-fluid" src="assets/img/companies/compileher.png" alt="" />
+        </li>
+        <li>
+          <img class="img-fluid" src="assets/img/companies/creditsuisse.png" alt="" />
+        </li>
+        <li>
+          <img class="img-fluid" src="assets/img/companies/dell.png" alt="" />
+        </li>
+        <li>
+          <img class="img-fluid" src="assets/img/companies/doordash.png" alt="" />
+        </li>
+        <li>
+          <img class="img-fluid" src="assets/img/companies/meta.png" alt="" />
+        </li>
+        <li>
+          <img class="img-fluid" src="assets/img/companies/weallcode.png" alt="" />
+        </li>
+        <li>
+          <img class="img-fluid" src="assets/img/companies/tesla.png" alt="" />
+        </li>
+        <li>
+          <img class="img-fluid" src="assets/img/companies/verizon.png" alt="" />
         </li>
       </ul>
-
-      <!-- <div class="carousel slide" data-ride="carousel">
-        <div class="row justify-content-center">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <div class="col-md-2">
-                <img class="img-fluid" src="assets/img/companies/amazon.png" alt="" />
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="col-md-2">
-                <img class="img-fluid" src="assets/img/companies/becker.png" alt="" />
-              </div>
-            </div>
-
-            <img src="assets/img/companies/google.png" alt="" />
-            <img src="assets/img/companies/apple.png" alt="" />
-            <img src="assets/img/companies/janestreet.png" alt="" />
-            <img src="assets/img/companies/jnj.png" alt="" />
-            <img src="assets/img/companies/jpmorgan.png" alt="" />
-            <img src="assets/img/companies/justicetext.png" alt="" />
-            <img src="assets/img/companies/blackstone.png" alt="" />
-            <img src="assets/img/companies/microsoft.png" alt="" />
-            <img src="assets/img/companies/nextdoor.png" alt="" />
-            <img src="assets/img/companies/pwc.png" alt="" />
-            <img src="assets/img/companies/stripe.png" alt="" />
-            <img src="assets/img/companies/codeyourdreams.png" alt="" />
-            <img src="assets/img/companies/compileher.png" alt="" />
-            <img src="assets/img/companies/creditsuisse.png" alt="" />
-            <img src="assets/img/companies/dell.png" alt="" />
-            <img src="assets/img/companies/doordash.png" alt="" />
-            <img src="assets/img/companies/meta.png" alt="" />
-            <img src="assets/img/companies/weallcode.png" alt="" />
-            <img src="assets/img/companies/tesla.png" alt="" />
-            <img src="assets/img/companies/verizon.png" alt="" />
-          </div>
-          <script>
-            let items = document.querySelectorAll(".carousel .carousel-item");
-
-            items.forEach((el) => {
-              const minPerSlide = 6;
-              let next = el.nextElementSibling;
-              for (var i = 1; i < minPerSlide; i++) {
-                if (!next) {
-                  next = items[0];
-                }
-                let cloneChild = next.cloneNode(true);
-                el.appendChild(cloneChild.children[0]);
-                next = next.nextElementSibling;
-              }
-            });
-          </script>
-        </div> -->
-      <!-- </div> -->
     </div>
 
     <div class="container-fluid text-center py-5 footer">
@@ -296,7 +295,11 @@
     </div>
 
     <!-- JS -->
-
+    <script type="text/javascript">
+      $(document).ready(function () {
+        $("#carousel").lightSlider();
+      });
+    </script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
