--- a/members.html
+++ b/members.html
@@ -299,7 +299,8 @@
       $(document).ready(function () {
         $("#carousel").lightSlider({
           auto: true,
-          autoWidth: true,
+          item: 7,
+          //   autoWidth: true,
           loop: true,
         });
       });
