--- a/members.html
+++ b/members.html
@@ -202,7 +202,7 @@
         </div>
       </div>
     </div>
-    <div class="container">
+    <div class="container" style="height: auto">
       <ul id="carousel">
         <li>
           <img class="img-fluid" src="assets/img/companies/amazon.png" alt="" />
@@ -300,7 +300,6 @@
         $("#carousel").lightSlider({
           auto: true,
           item: 7,
-          //   autoWidth: true,
           loop: true,
         });
       });
