--- a/members.html
+++ b/members.html
@@ -202,8 +202,8 @@
         </div>
       </div>
     </div>
-    <div class="container" style="height: auto">
-      <ul id="carousel">
+    <div class="container">
+      <ul id="carousel" style="height: auto">
         <li>
           <img class="img-fluid" src="assets/img/companies/amazon.png" alt="" />
         </li>
