--- a/members.html
+++ b/members.html
@@ -203,7 +203,7 @@
       </div>
     </div>
     <div class="container">
-      <ul id="carousel" style="height: auto">
+      <ul id="carousel">
         <li>
           <img class="img-fluid" src="assets/img/companies/amazon.png" alt="" />
         </li>
