--- a/members.html
+++ b/members.html
@@ -301,6 +301,7 @@
           auto: true,
           item: 7,
           loop: true,
+          pager: false,
         });
       });
     </script>
