--- a/members.html
+++ b/members.html
@@ -272,6 +272,101 @@
         </li>
       </ul>
     </div>
+    <div class="container">
+          <div class="row">
+            <div class="col-lg-2 col-md-6">
+              <h2>Founders</h2>
+            </div>
+            <div class="col-lg-2 col-md-6">
+              <p>
+                Dhruv Baid<br />
+                Shriya Bansal<br />
+                Elly Choi<br />
+                Cameron Lowry<br />
+                Vallary Muhalia<br />
+                Blaise Muhirwa<br />
+                Emma Rosenthal<br />
+                Elaine Wan
+              </p>
+            </div>
+
+            <div class="col-lg-2 col-md-6">
+              <h2>Alpha</h2>
+            </div>
+            <div class="col-lg-2 col-md-6">
+              <p>
+                Abigail Barnes<br />
+                Lexington Brill<br />
+                Elizabeth Coble<br />
+                Isabella DeClue<br />
+                Tessie Dong<br />
+                Chelsea Egbarin<br />
+                Pratham Gandhi<br />
+                Marie-Liesse Gouilliard<br />
+                Beatrice Katnelson<br />
+                Elise Katnelson<br />
+                Eric Liu<br />
+                Tudor Popescu<br />
+                Sam Shatzkin<br />
+                Vann Strasen<br />
+                Danya Wang<br />
+                Laura Zielinski
+              </p>
+            </div>
+
+            <div class="col-lg-2 col-md-6">
+              <h2>Beta</h2>
+            </div>
+
+            <div class="col-lg-2 col-md-6">
+              <p>
+                Amulya Agrawal<br />
+                Emilio Andere<br />
+                Don Assamongkol<br />
+                Jackson Brouwer<br />
+                Yoobin Cha<br />
+                Max Gallo<br />
+                Jaeyoung Kim<br />
+                Kaya Lee<br />
+                Andi Liu<br />
+                Justin Meng<br />
+                Shivani Puli<br />
+                Gregorio Florentino Sanchez<br />
+                Minjoo Song<br />
+                Katherine Sun<br />
+                Rohan Vasishth<br />
+                Kyle Wong<br />
+                Vincent Zhang
+              </p>
+            </div>
+
+            <div class="col-lg-2 col-md-6">
+              <h2>Gamma</h2>
+            </div>
+            <div class="col-lg-2 col-md-6">
+              <p>
+                Arnav Agarwal<br />
+                Joshua Ahn<br />
+                Ryan Choi<br />
+                Rohan Deme<br />
+                Alexis Elliot<br />
+                Iris Hwang<br />
+                Olivia Jerdee<br />
+                Rachel Lee<br />
+                Tiffany Lee<br />
+                Francisco Mendes<br />
+                Steph Ran<br />
+                Mahum Sheikh<br />
+                Brayley Starr<br />
+                Je Yeong (James) Soh<br />
+                Boen Wang<br />
+                Kevin Wang<br />
+                Lan (Maggie) Xu<br />
+                Kathy Yao
+              </p>
+        </div>
+      </section>
+    </div>
 
     <div class="container-fluid text-center py-5 footer">
       <p>2023 KTP Theta Chapter. Website by KTP Alpha Chapter.</p>
