--- a/rush.html
+++ b/rush.html
@@ -84,7 +84,7 @@
 
     <div class="container py-5">
       <div class="scroll" id="apply">
-        <div class="row">
+        <div class="row px-3 px-md-0">
           <h2 class="text-center mb-4">Rush KTP Fall 2022</h2>
           <p>
             Thank you to everyone for participating in our Fall 2022 rush process. Check back later
@@ -97,161 +97,168 @@
     <div class="bg-gray">
       <div class="container py-5">
         <div class="scroll" id="events">
-          <h2 class="text-center mb-4">Fall Events</h2>
-          <p>
-            We require all rushees to attend at least
-            <b>one Info Session and one other Open Rush event</b>. If this isn't possible for you,
-            reach out to our Director of Membership, Pratham (<a href="mailto:pratham@uchicago.edu"
-              >pratham@uchicago.edu</a
-            >).
-          </p>
-          <div class="cd-timeline js-cd-timeline">
-            <div class="container cd-timeline__container">
-              <div class="cd-timeline__block">
-                <div class="cd-timeline__img">
-                  <img src="assets/img/rush/fourattable.jpg" alt="" />
+          <div class="row px-3 px-md-0">
+            <h2 class="text-center mb-4">Fall Events</h2>
+            <p>
+              We require all rushees to attend at least
+              <b>one Info Session and one other Open Rush event</b>. If this isn't possible for you,
+              reach out to our Director of Membership, Pratham (<a
+                href="mailto:pratham@uchicago.edu"
+                >pratham@uchicago.edu</a
+              >).
+            </p>
+            <div class="cd-timeline js-cd-timeline">
+              <div class="container cd-timeline__container">
+                <div class="cd-timeline__block">
+                  <div class="cd-timeline__img">
+                    <img src="assets/img/rush/fourattable.jpg" alt="" />
+                  </div>
+
+                  <div class="cd-timeline__content">
+                    <h4>RSO Fair</h4>
+                    <p>
+                      We're excited to have a table at the UChicago Fall RSO Fair! Stop by to chat
+                      with brothers and hear more about joining KTP. We're looking forward to
+                      meeting you.
+                    </p>
+                    <p>
+                      <a style="font-style: italic"
+                        >Friday, September 30th | 3:00&#8211;5:30 PM | Main Quad</a
+                      >
+                    </p>
+                  </div>
                 </div>
 
-                <div class="cd-timeline__content">
-                  <h4>RSO Fair</h4>
-                  <p>
-                    We're excited to have a table at the UChicago Fall RSO Fair! Stop by to chat
-                    with brothers and hear more about joining KTP. We're looking forward to meeting
-                    you.
-                  </p>
-                  <p>
+                <div class="cd-timeline__block">
+                  <div class="cd-timeline__img">
+                    <img src="assets/img/rush/guysattable.jpg" alt="" />
+                  </div>
+
+                  <div class="cd-timeline__content">
+                    <h4>Info Session #1</h4>
+                    <p>
+                      <a href="https://fb.me/e/2VuTWCk5b">Facebook Event Link (Please RSVP)</a>
+                    </p>
+                    <p>
+                      <b>We require all rushees to attend one information session.</b>
+                      They're a great opportunity for you to learn the basics about KTP, meet some
+                      of our members, and decide if our community is one you’d like to become a part
+                      of.
+                    </p>
+
                     <a style="font-style: italic"
-                      >Friday, September 30th | 3:00&#8211;5:30 PM | Main Quad</a
+                      >Monday, October 3rd | 6:00&#8211;7:00 PM | Stuart 102</a
                     >
-                  </p>
-                </div>
-              </div>
-
-              <div class="cd-timeline__block">
-                <div class="cd-timeline__img">
-                  <img src="assets/img/rush/guysattable.jpg" alt="" />
+                  </div>
                 </div>
 
-                <div class="cd-timeline__content">
-                  <h4>Info Session #1</h4>
-                  <p>
-                    <a href="https://fb.me/e/2VuTWCk5b">Facebook Event Link (Please RSVP)</a>
-                  </p>
-                  <p>
-                    <b>We require all rushees to attend one information session.</b>
-                    They're a great opportunity for you to learn the basics about KTP, meet some of
-                    our members, and decide if our community is one you’d like to become a part of.
-                  </p>
+                <div class="cd-timeline__block">
+                  <div class="cd-timeline__img">
+                    <img src="assets/img/rush/cooking.jpg" alt="" />
+                  </div>
 
-                  <a style="font-style: italic"
-                    >Monday, October 3rd | 6:00&#8211;7:00 PM | Stuart 102</a
-                  >
-                </div>
-              </div>
+                  <div class="cd-timeline__content">
+                    <h4>Game Night</h4>
+                    <p>
+                      <a href="https://fb.me/e/1ywnI2T1F">Facebook Event Link (Please RSVP)</a>
+                    </p>
+                    <p>
+                      <b
+                        >We require all rushees to attend either Game Night or Charity Event +
+                        Resume Review.</b
+                      >
+                      Join us for a fun evening of your favorite childhood games like Twister,
+                      ConnectFour, and many others. Come learn about the many people and communities
+                      that make us who we are!
+                    </p>
 
-              <div class="cd-timeline__block">
-                <div class="cd-timeline__img">
-                  <img src="assets/img/rush/cooking.jpg" alt="" />
-                </div>
-
-                <div class="cd-timeline__content">
-                  <h4>Game Night</h4>
-                  <p>
-                    <a href="https://fb.me/e/1ywnI2T1F">Facebook Event Link (Please RSVP)</a>
-                  </p>
-                  <p>
-                    <b
-                      >We require all rushees to attend either Game Night or Charity Event + Resume
-                      Review.</b
+                    <a style="font-style: italic; color: #303f4a"
+                      >Tuesday, October 4th | 7:00&#8211;9:00 PM | McCormick Lounge (First floor of
+                      Reynolds Club)</a
                     >
-                    Join us for a fun evening of your favorite childhood games like Twister,
-                    ConnectFour, and many others. Come learn about the many people and communities
-                    that make us who we are!
-                  </p>
-
-                  <a style="font-style: italic; color: #303f4a"
-                    >Tuesday, October 4th | 7:00&#8211;9:00 PM | McCormick Lounge (First floor of
-                    Reynolds Club)</a
-                  >
-                </div>
-              </div>
-
-              <div class="cd-timeline__block">
-                <div class="cd-timeline__img">
-                  <img src="assets/img/rush/point.jpg" alt="Picture" />
+                  </div>
                 </div>
 
-                <div class="cd-timeline__content">
-                  <h4>Color a Smile Charity Event + Resume Review</h4>
-                  <p>
-                    <a href="https://fb.me/e/1ZN8V9JKV">Facebook Event Link (Please RSVP)</a>
-                  </p>
-                  <p>
-                    <b
-                      >We require all rushees to attend either Game Night or Charity Event + Resume
-                      Review.</b
+                <div class="cd-timeline__block">
+                  <div class="cd-timeline__img">
+                    <img src="assets/img/rush/point.jpg" alt="Picture" />
+                  </div>
+
+                  <div class="cd-timeline__content">
+                    <h4>Color a Smile Charity Event + Resume Review</h4>
+                    <p>
+                      <a href="https://fb.me/e/1ZN8V9JKV">Facebook Event Link (Please RSVP)</a>
+                    </p>
+                    <p>
+                      <b
+                        >We require all rushees to attend either Game Night or Charity Event +
+                        Resume Review.</b
+                      >
+                      Have your resume reviewed by brothers while contributing to the Color A Smile
+                      Charity with your fellow rushees. We will have drawings for you to color and
+                      write messages on, to be distributed to senior citizens, troops serving
+                      overseas, and many others. Remember to bring two printed copies of your
+                      resume!
+                    </p>
+
+                    <a style="font-style: italic"
+                      >Wednesday, October 5th | 7:00&#8211;8:00 PM | Peach's Cafe (First floor of
+                      Crerar Library)</a
                     >
-                    Have your resume reviewed by brothers while contributing to the Color A Smile
-                    Charity with your fellow rushees. We will have drawings for you to color and
-                    write messages on, to be distributed to senior citizens, troops serving
-                    overseas, and many others. Remember to bring two printed copies of your resume!
-                  </p>
-
-                  <a style="font-style: italic"
-                    >Wednesday, October 5th | 7:00&#8211;8:00 PM | Peach's Cafe (First floor of
-                    Crerar Library)</a
-                  >
-                </div>
-              </div>
-
-              <div class="cd-timeline__block">
-                <div class="cd-timeline__img">
-                  <img src="assets/img/rush/pyramid.jpg" alt="" />
-                </div>
-                <div class="cd-timeline__content">
-                  <h4>Info Session #2</h4>
-                  <p>
-                    <a href="https://fb.me/e/4SEpF4Lml">Facebook Event Link (Please RSVP)</a>
-                  </p>
-                  <p>
-                    <b>We require all rushees to attend one information session.</b>
-                    They're a great opportunity for you to learn the basics about KTP, meet some of
-                    our members, and decide if our community is one you’d like to become a part of.
-                  </p>
-
-                  <a style="font-style: italic"
-                    >Thursday, October 6th | 6:00&#8211;7:00 PM |
-                    <a
-                      href="https://uchicago.zoom.us/j/94968204438?pwd=TElaK1Q3ZkkzUHBuU1ZDd0ZWVENhUT09"
-                      >Zoom Link</a
-                    >
-                  </a>
-                </div>
-              </div>
-
-              <div class="cd-timeline__block">
-                <div class="cd-timeline__img">
-                  <img src="assets/img/rush/threebiglittle.jpg" alt="" />
+                  </div>
                 </div>
 
-                <div class="cd-timeline__content">
-                  <h4>Application Due</h4>
-                  <p>Be sure to turn in your online application!</p>
-                  <a style="font-style: italic">Thursday, October 6th | 11:59 PM</a>
-                </div>
-              </div>
+                <div class="cd-timeline__block">
+                  <div class="cd-timeline__img">
+                    <img src="assets/img/rush/pyramid.jpg" alt="" />
+                  </div>
+                  <div class="cd-timeline__content">
+                    <h4>Info Session #2</h4>
+                    <p>
+                      <a href="https://fb.me/e/4SEpF4Lml">Facebook Event Link (Please RSVP)</a>
+                    </p>
+                    <p>
+                      <b>We require all rushees to attend one information session.</b>
+                      They're a great opportunity for you to learn the basics about KTP, meet some
+                      of our members, and decide if our community is one you’d like to become a part
+                      of.
+                    </p>
 
-              <div class="cd-timeline__block">
-                <div class="cd-timeline__img">
-                  <img src="assets/img/rush/pretselfie.jpg" alt="Picture" />
+                    <a style="font-style: italic"
+                      >Thursday, October 6th | 6:00&#8211;7:00 PM |
+                      <a
+                        href="https://uchicago.zoom.us/j/94968204438?pwd=TElaK1Q3ZkkzUHBuU1ZDd0ZWVENhUT09"
+                        >Zoom Link</a
+                      >
+                    </a>
+                  </div>
                 </div>
 
-                <div class="cd-timeline__content">
-                  <h4>Closed Rush</h4>
-                  <p>
-                    Our Closed Rush is invite-only and consists of interviews and two secret events.
-                  </p>
-                  <a style="font-style: italic">Sunday, October 9th&#8211;Friday, October 14th</a>
+                <div class="cd-timeline__block">
+                  <div class="cd-timeline__img">
+                    <img src="assets/img/rush/threebiglittle.jpg" alt="" />
+                  </div>
+
+                  <div class="cd-timeline__content">
+                    <h4>Application Due</h4>
+                    <p>Be sure to turn in your online application!</p>
+                    <a style="font-style: italic">Thursday, October 6th | 11:59 PM</a>
+                  </div>
+                </div>
+
+                <div class="cd-timeline__block">
+                  <div class="cd-timeline__img">
+                    <img src="assets/img/rush/pretselfie.jpg" alt="Picture" />
+                  </div>
+
+                  <div class="cd-timeline__content">
+                    <h4>Closed Rush</h4>
+                    <p>
+                      Our Closed Rush is invite-only and consists of interviews and two secret
+                      events.
+                    </p>
+                    <a style="font-style: italic">Sunday, October 9th&#8211;Friday, October 14th</a>
+                  </div>
                 </div>
               </div>
             </div>
