--- a/contact.html
+++ b/contact.html
@@ -81,8 +81,8 @@
       </div>
     </nav>
 
-    <div class="container py-5">
-      <div class="row">
+    <div class="container pt-5">
+      <div class="row px-3 px-md-0">
         <img src="assets/img/contact/bigfam.jpg" class="img-fluid col-lg-6" alt="" />
         <div class="col-lg-6 pt-4 pt-lg-0">
           <h2 class="text-center mb-4">Students</h2>
@@ -95,7 +95,7 @@
             quarters.
           </p>
         </div>
-        <div class="row mt-md-5 pt-md-5">
+        <div class="row mt-lg-5 pt-lg-5 px-3 px-md-0">
           <img
             src="assets/img/contact/walk.jpg"
             class="img-fluid col-lg-6 order-1 order-lg-2"
