--- a/members.html
+++ b/members.html
@@ -273,7 +273,7 @@
       </ul>
     </div>
     <div class="container">
-      <div class="row">
+      <div class="row px-3 px-md-0">
         <div class="col-lg-2 col-md-6">
           <h2>Founders</h2>
         </div>
@@ -289,7 +289,6 @@
             Elaine Wan
           </p>
         </div>
-
         <div class="col-lg-2 col-md-6">
           <h2>Alpha</h2>
         </div>
@@ -313,11 +312,9 @@
             Laura Zielinski
           </p>
         </div>
-
         <div class="col-lg-2 col-md-6">
           <h2>Beta</h2>
         </div>
-
         <div class="col-lg-2 col-md-6">
           <p>
             Amulya Agrawal<br />
@@ -339,7 +336,6 @@
             Vincent Zhang
           </p>
         </div>
-
         <div class="col-lg-2 col-md-6">
           <h2>Gamma</h2>
         </div>
